--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "concurrently --names \"server,client\" \"npm run server --silent\" \"npm run client --solent\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "client": "cd client && npm start",
-    "server": "env-cmd -f ./config/dev.env nodemon index.js"
+    "server": "env-cmd -f ./config/dev.env nodemon index.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
